# lab1_sql_de25_hannah_zemack

./: .gitignore  README.md  lab1.ipynb  load_sakila_sqlite_duckdb.py  pyproject.toml
dashboard/pages/: Film_data.md  Revenue.md  index.md  sakila.md
dashboard/sources/sakila/: actor.sql  category.sql  connection.yaml  film.sql  payment.sql  staff.sql  store.sql  test.sql
